--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 				
 			</div>
 			<!-- <input type="hidden" name="numTerminal" value="" id="numTerminal"></input> -->
-			<input data-num="" data-nombre="" type="button" id="btn_hist" value="Historial"></input>
+			<input data-num="" data-nombre="" type="button" id="btn_hist" value="Historial">
 			<!-- </br> -->
-			<input type="button" id="btn_abrir" data-id="" data-num="" value="Abrir"></input>
+			<input type="button" id="btn_abrir" data-id="" data-num="" value="Abrir">
 			
 		</div>
 		<div data-role="footer">
@@ -120,7 +120,3 @@
     </div>
   </body>
 </html>
-
-
-
-<!--prueba commit-->
