--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 				<li><a class="detalles" data-id="8" data-nombre="Entrada Bici 1" data-num="18">Bici 1</a></li>
 				<li><a class="detalles" data-id="9" data-nombre="Entrada Bici 2" data-num="19">Bici 2</a></li>
 				<li><a class="detalles" data-id="10" data-nombre="Entrada Subsuelo" data-num="20">Subsuelo</a></li>
+				<li><a class="detalles" data-id="11" data-nombre="Entrada Nivel 3 y 1/2" data-num="21">Nivel 3 y 1/2</a></li>
+				<li><a class="detalles" data-id="4" data-nombre="PRUEBA TALLER" data-num="14">PRUEBA TALLER</a></li>
 			</ul>
 		</div>
 		<div data-role="footer" data-theme="b">
@@ -91,6 +93,7 @@
 			<li><a class="detalles" data-num="36" data-nombre="Salida Bici 2" data-id="17">Bici 2</a></li>
 			<li><a class="detalles" data-num="37" data-nombre="Salida Bici 3" data-id="18">Bici 3</a></li>
 			<li><a class="detalles" data-num="38" data-nombre="Salida Subsuelo" data-id="19">Subsuelo</a></li>
+			<li><a class="detalles" data-num="39" data-nombre="Salida Nivel 3 y 1/2" data-id="20">Nivel 3 y 1/2</a></li>
 		</ul>
       </div>
       <div data-role="footer" data-theme="b">
