--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
         <div data-role="page" id="terminal">
             <div data-role="header">
                 <h1 id="titulo">terminal</h1>
-                <!--<a href="#" data-rel="back" data-icon="arrow-l" data-iconpos="notext"></a>-->
-                <a href="#panel_lateral" data-icon="bars" data-iconpos="notext"></a>
+                <a href="#" data-rel="back" data-icon="arrow-l" data-iconpos="notext" class="toHome"></a>
+                <!--<a href="#panel_lateral" data-icon="bars" data-iconpos="notext"></a>-->
             </div>
             <div data-role="main" class="ui-content">
 
