--- a/index.html
+++ b/index.html
@@ -144,10 +144,11 @@
 
         <div data-role="page"  id="confirmReini" class="confirmReini">
             <div data-role="header" data-theme="b">
-                <h2>Confirmar reinicio</h2>
+                <h1 >Confirmar reinicio</h1>
             </div>
             <div data-role="main" class="ui-content">
-                <div>
+                <div data-role="controlgroup" data-type="horizontal" align="center">
+                    
                     <a href="#" data-role="button" data-rel="back" data-theme="a" class="ui-button ui-shadow ui-corner-all ui-widget ui-button-a" role="button">Cancelar</a>
                     <a href="#" id="btn_confirm" data-role="button" data-theme="a" class="ui-button ui-shadow ui-corner-all ui-widget ui-button-a" role="button">Confirmar</a>
                 </div>
