--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h2>Pista 2</h2>
             </div>
             <div data-role="main" class="ui-content">
-                <ul data-role="listview" data-theme="b">
+                <ul data-role="listview" data-theme="b" >
                     <li><a class="detalles" data-num="31" data-nombre="Salida Tata" data-id="12">Salida TaTa</a></li>
                     <li><a class="detalles" data-num="32" data-nombre="Salida Hípica" data-id="13">Salida Hípica</a></li>
                     <li><a class="detalles" data-id="1" data-nombre="Entrada Tata" data-num="11">Entrada Tata</a></li>
@@ -119,18 +119,16 @@
                 <h2>Control de accesos</h2>
             </div>
         </div>
-
-        <div data-role="page" id="terminal">
+<!--///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+        <div data-role="page" id="terminal" data-theme="b">
             <div data-role="header">
                 <h1 id="titulo">terminal</h1>
-                <a href="#" data-rel="back" data-icon="arrow-l" data-iconpos="notext" class="toHome"></a>
+                <a href="#" data-rel="back" data-icon="arrow-l" data-iconpos="notext"></a>
                 <!--<a href="#panel_lateral" data-icon="bars" data-iconpos="notext"></a>-->
             </div>
             <div data-role="main" class="ui-content">
-
                 <div align="center" id="divVideo">
-                    <!-- <img name="imagename" id="videoImg" class="coveredImage" src="http://125.125.10.138/api/lastframe.cgi" width=80% height=auto onload="setTimeout('document.getElementById(\'videoImg\').src=\'http://125.125.10.138/api/lastframe.cgi?\'+new Date().getMilliseconds()', 100)"> -->
-
+                    <!-- <img name="imagename" id="videoImg" class="coveredImage" src="http://125.125.10.138/api/lastframe.cgi" width=80% height=auto onload="setTimeout('document.getElementById(\'videoImg\').src=\'http://125.125.10.xxx/api/lastframe.cgi?\'+new Date().getMilliseconds()', 100)"> -->
                 </div>
 <!--                 <input type="hidden" data-id="" data-num="" value="" data-nombre="" id="refTerminal">-->
                 <input type="button" id="btn_abrir" value="Abrir">
@@ -142,24 +140,23 @@
             </div>
         </div>
 
-        <div data-role="page"  id="confirmReini" class="confirmReini">
-            <div data-role="header" data-theme="b">
+        <div data-role="page"  id="confirmReini" class="confirmReini" data-theme="b">
+            <div data-role="header" >
                 <h1 >Confirmar reinicio</h1>
             </div>
             <div data-role="main" class="ui-content">
-                <div data-role="controlgroup" data-type="horizontal" align="center">
-                    
-                    <a href="#" data-role="button" data-rel="back" data-theme="a" class="ui-button ui-shadow ui-corner-all ui-widget ui-button-a" role="button">Cancelar</a>
+                <div>
                     <a href="#" id="btn_confirm" data-role="button" data-theme="a" class="ui-button ui-shadow ui-corner-all ui-widget ui-button-a" role="button">Confirmar</a>
+                    <a href="#" data-role="button" data-rel="back" data-theme="a" class="ui-button ui-shadow ui-corner-all ui-widget ui-button-a" role="button">Cancelar</a>
                 </div>
             </div>
-            <div data-role="footer" data-theme="b">
+            <div data-role="footer">
                 <h2>Control de accesos</h2>
             </div>
         </div>
 
-        <!-- panel lateral -->
-        <div data-role="panel" id="panel_lateral" data-theme="a">
+<!--///////////////////////////////// panel lateral /////////////////////////////////////////////////////////////////-->
+        <div data-role="panel" id="panel_lateral" data-theme="b">
             <ul data-role="listview">
                 <li><a href="#pista2" data-transition="slide">Pista 2</a></li>
                 <li><a href="#pista3" data-transition="slide">Pista 3 y Subsuelo</a></li>
@@ -168,7 +165,5 @@
                 <li><a href="#creden" data-transition="slide">Credenciados</a></li>
             </ul>
         </div>
-
-
     </body>
 </html>
