--- a/Index.html
+++ b/Index.html
@@ -38,12 +38,12 @@
             </div>
             <div data-role="main" class="ui-content">
                 <ul data-role="listview" data-theme="b" >
-                    <li><a class="detalles" data-num="31" data-nombre="Salida Tata" data-id="12">Salida TaTa</a></li>
-                    <li><a class="detalles" data-num="32" data-nombre="Salida Hípica" data-id="13">Salida Hípica</a></li>
-                    <li><a class="detalles" data-id="1" data-nombre="Entrada Tata" data-num="11">Entrada Tata</a></li>
-                    <li><a class="detalles" data-id="2" data-nombre="Entrada Hípica 1" data-num="12">Entrada Hípica 1</a></li>
-                    <li><a class="detalles" data-id="3" data-nombre="Entrada Hípica 2" data-num="13">Entrada Hípica 2</a></li>
-                    <li><a class="detalles" data-id="4" data-nombre="PRUEBA TALLER" data-num="14">PRUEBA TALLER</a></li>
+                    <li><a class="detalles" data-num="31" data-nombre="Salida<br>Tata" data-id="12">Salida TaTa</a></li>
+                    <li><a class="detalles" data-num="32" data-nombre="Salida<br>Hípica" data-id="13">Salida Hípica</a></li>
+                    <li><a class="detalles" data-id="1" data-nombre="Entrada<br>Tata" data-num="11">Entrada Tata</a></li>
+                    <li><a class="detalles" data-id="2" data-nombre="Entrada<br>Hípica 1" data-num="12">Entrada Hípica 1</a></li>
+                    <li><a class="detalles" data-id="3" data-nombre="Entrada<br>Hípica 2" data-num="13">Entrada Hípica 2</a></li>
+                    <li><a class="detalles" data-id="4" data-nombre="PRUEBA<br>TALLER" data-num="14">PRUEBA TALLER</a></li>
                 </ul>
             </div>
             <div data-role="footer" data-theme="b">
@@ -53,14 +53,14 @@
         <div data-role="page" id="pista3" class="menuItem">
             <div data-role="header" data-theme="b">
                 <a href="#panel_lateral" data-icon="bars" data-iconpos="notext"></a>
-                <h2>Pista 3 y Subsuelo</h2>
+                <h2>Pista 3 y <br>Subsuelo</h2>
             </div>
             <div data-role="main" class="ui-content">
                 <ul data-role="listview" data-theme="b">
-                    <li><a class="detalles" data-num="34" data-nombre="Salida Bricolage" data-id="15">Salida Bricolage</a></li>
-                    <li><a class="detalles" data-num="38" data-nombre="Salida Subsuelo" data-id="19">Salida Subsuelo</a></li>
-                    <li><a class="detalles" data-id="7" data-nombre="Entrada Bricolage" data-num="17">Entrada Bricolage</a></li>
-                    <li><a class="detalles" data-id="10" data-nombre="Entrada Subsuelo" data-num="20">Entrada Subsuelo</a></li>
+                    <li><a class="detalles" data-num="34" data-nombre="Salida<br>Bricolage" data-id="15">Salida Bricolage</a></li>
+                    <li><a class="detalles" data-num="38" data-nombre="Salida<br>Subsuelo" data-id="19">Salida Subsuelo</a></li>
+                    <li><a class="detalles" data-id="7" data-nombre="Entrada<br>Bricolage" data-num="17">Entrada Bricolage</a></li>
+                    <li><a class="detalles" data-id="10" data-nombre="Entrada<br>Subsuelo" data-num="20">Entrada Subsuelo</a></li>
                 </ul>
             </div>
             <div data-role="footer" data-theme="b">
@@ -74,10 +74,10 @@
             </div>
             <div data-role="main" class="ui-content">
                 <ul data-role="listview" data-theme="b">
-                    <li><a class="detalles" data-num="33" data-nombre="Salida Laffitte" data-id="14">Salida Laffitte</a></li>
-                    <li><a class="detalles" data-num="40" data-nombre="Salida Laffitte 2" data-id="27">Salida Laffitte 2</a></li>
-                    <li><a class="detalles" data-id="5" data-nombre="Entrada CostaAzul 1" data-num="15">Entrada CostaAzul 1</a></li>
-                    <li><a class="detalles" data-id="6" data-nombre="Entrada CostaAzul 2" data-num="16">Entrada CostaAzul 2</a></li>
+                    <li><a class="detalles" data-num="33" data-nombre="Salida<br>Laffitte" data-id="14">Salida Laffitte</a></li>
+                    <li><a class="detalles" data-num="40" data-nombre="Salida<br>Laffitte 2" data-id="27">Salida Laffitte 2</a></li>
+                    <li><a class="detalles" data-id="5" data-nombre="Entrada<br>CostaAzul 1" data-num="15">Entrada CostaAzul 1</a></li>
+                    <li><a class="detalles" data-id="6" data-nombre="Entrada<br>CostaAzul 2" data-num="16">Entrada CostaAzul 2</a></li>
                 </ul>
             </div>
             <div data-role="footer" data-theme="b">
@@ -88,15 +88,15 @@
         <div data-role="page" id="bandinf" class="menuItem">
             <div data-role="header" data-theme="b">
                 <a href="#panel_lateral" data-icon="bars" data-iconpos="notext"></a>
-                <h2>Bandeja Inf</h2>
+                <h2>Bandeja Inf.</h2>
             </div>
             <div data-role="main" class="ui-content">
                 <ul data-role="listview" data-theme="b">
-                    <li><a class="detalles" data-num="35" data-nombre="Salida Bici 1" data-id="16">Salida Bici 1</a></li>
-                    <li><a class="detalles" data-num="36" data-nombre="Salida Bici 2" data-id="17">Salida Bici 2</a></li>
-                    <li><a class="detalles" data-num="37" data-nombre="Salida Bici 3" data-id="18">Salida Bici 3</a></li>
-                    <li><a class="detalles" data-id="8" data-nombre="Entrada Bici 1" data-num="18">Entrada Bici 1</a></li>
-                    <li><a class="detalles" data-id="9" data-nombre="Entrada Bici 2" data-num="19">Entrada Bici 2</a></li>
+                    <li><a class="detalles" data-num="35" data-nombre="Salida<br>Bici 1" data-id="16">Salida Bici 1</a></li>
+                    <li><a class="detalles" data-num="36" data-nombre="Salida<br>Bici 2" data-id="17">Salida Bici 2</a></li>
+                    <li><a class="detalles" data-num="37" data-nombre="Salida<br>Bici 3" data-id="18">Salida Bici 3</a></li>
+                    <li><a class="detalles" data-id="8" data-nombre="Entrada<br>Bici 1" data-num="18">Entrada Bici 1</a></li>
+                    <li><a class="detalles" data-id="9" data-nombre="Entrada<br>Bici 2" data-num="19">Entrada Bici 2</a></li>
                 </ul>
             </div>
             <div data-role="footer" data-theme="b">
@@ -111,8 +111,8 @@
             </div>
             <div data-role="main" class="ui-content">
                 <ul data-role="listview" data-theme="b">
-                    <li><a class="detalles" data-num="39" data-nombre="Salida Nivel 3 y 1/2" data-id="20">Salida 3 y 1/2</a></li>
-                    <li><a class="detalles" data-id="11" data-nombre="Entrada Nivel 3 y 1/2" data-num="21">Entrada 3 y 1/2</a></li>
+                    <li><a class="detalles" data-num="39" data-nombre="Salida<br>Credenciados" data-id="20">Salida Credenciados</a></li>
+                    <li><a class="detalles" data-id="11" data-nombre="Entrada<br>Crerdenciados" data-num="21">Entrada Credenciados</a></li>
                 </ul>
             </div>
             <div data-role="footer" data-theme="b">
@@ -140,9 +140,11 @@
             </div>
         </div>
 
+<!--//////////////////////////////////////////////////////////////////////////////////////////////////////-->
+
         <div data-role="page"  id="confirmReini" class="confirmReini" data-theme="b">
             <div data-role="header" >
-                <h1 >Confirmar reinicio</h1>
+                <h1 id="confirmarNombre">confirmar</h1>
             </div>
             <div data-role="main" class="ui-content">
                 <div>
